--- a/client/src/app/shared/components/layouts/index-layout/index-layout.component.html
+++ b/client/src/app/shared/components/layouts/index-layout/index-layout.component.html
@@ -79,6 +79,9 @@
             </ul>
             <ul class="navbar-nav nav-flex-icons">
                 <li class="nav-item">
+                    <a (click)="googleLogin()" class="nav-link"><i class="fab fa-google"></i></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link"><i class="fab fa-facebook-f"></i></a>
                 </li>
                 <li class="nav-item">
