--- a/client/src/app/shared/components/register/register.component.scss
+++ b/client/src/app/shared/components/register/register.component.scss
@@ -34,20 +34,20 @@ app-register:host {
                 content: "";
                 width: 50px;
                 height: 1px;
-                background-color: black;
+                background-color: white;
                 position: absolute;
                 left: -60px;
-                top: 18px;
+                top: 9px;
             }
     
             .form-title::after {
                 content: "";
                 width: 50px;
                 height: 1px;
-                background-color: black;
+                background-color: white;
                 position: absolute;
                 right: -60px;
-                top: 18px;
+                top: 9px;
             }
     
             .form-item {
